调整发布信息中的仓库地址，改为 opensolon 相关